--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-loader-spinner": "^5.1.4",
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.2.0",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
